Added Onboarding Screen|Finished search functionality Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   android/app/src/main/AndroidManifest.xml
	new file:   assets/fonts/Avenir-Medium.ttf
	modified:   lib/pages/home.dart
	modified:   lib/pages/onboarding.dart
	modified:   lib/pages/profile.dart
	modified:   lib/pages/search_name.dart
	modified:   lib/services/database_service.dart
	modified:   pubspec.yaml

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.khoj_app_hack">
    <application
-        android:label="khoj_app_hack"
+        android:label="Khoj"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
